--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 </head>
 
 <body style="background: rgb(13,12,61);">
-    <section class="login-clean" style="background: rgb(13,12,61);padding: 153px 0px;width: 1466.4px;height: 762px;">
+    <div class="align-items-center login-clean" style="background: rgb(13,12,61);">
         <form method="post" style="background: rgb(244,235,35);width: 482px;height: 410px;transform: perspective(0px);">
+            <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><i class="fas fa-cloud-sun-rain"></i>
                 <h1 style="font-size: 29px;color: rgb(197,0,0);text-shadow: 0px 0px 2px rgb(244,30,50);">Weather Predictor</h1>
             </div>
             <div class="form-group"><input type="text" class="form-control" name="cityName" placeholder="City" /></div>
             <div class="form-group"><button class="btn btn-primary btn-block" type="submit" style="background: rgb(197,0,0);">Submit</button></div>
         </form>
-    </section>
+    </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
